--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,11 @@
   <script src="{{ url_for('static', filename='main.js') }}" ></script>
 </head>
 <body>
-  <div id="chart"></div>
+  <table>
+    <tr><td><div id="chart"></div></td>
+        <td><div id="labels">Buttons!</div></td></tr>
+
+  </table>
   <div id="detail"></div>
 </body>
 </html>
