--- a/templates/index.html
+++ b/templates/index.html
@@ -6,15 +6,11 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='dashboard.css') }}" />
 </head>
 <body>
-  <div id="chart" style="display:table-cell"></div>
+  <div id="chart"></div>
   <div>
     <g class="ticket_detail"></g>
   </div>
-  <div class='text_div'> 
-    <div class='labelText' style="background-color:orange"> BOX 1</div> 
-    <div class='labelText' style="background-color:blue"> BOX 2</div>
-    <div class='labelText' style="background-color:black"> BOX 3 </div>
-  </div>
+  <div class='text_div'></div>
 
 </body>
 </html>
