--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,10 @@
         <div id="chart"></div>
       </div>
 
+      <div class="jumbotron">
+        <div class='text_div'></div>
+      </div>
+      
       <div class="row marketing">
            <div>
              <g class="ticket_detail"></g>
@@ -42,7 +46,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 
-  <div class='text_div'></div>
 
 </body>
 </html>
