--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,10 @@
         <div id="chart"></div>
       </div>
 
-      <div class="jumbotron">
+      <div class="row marketing">
         <div class='text_div'></div>
       </div>
-      
+
       <div class="row marketing">
            <div>
              <g class="ticket_detail"></g>
