--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="jumbotron">
-        <div id="chart"></div>
+        <div id="chart" class="jumbotron"></div>
       </div>
 
       <div class="row marketing">
