--- a/static/jumbotron-narrow.css
+++ b/static/jumbotron-narrow.css
@@ -4,6 +4,17 @@ body {
   padding-bottom: 20px;
 }
 
+.bubble {
+    background-color: #DDDDDD;
+    max-width: 100%;
+    max-width: 100%;
+}
+
+.labelText {
+    float: left;
+    color: white;
+    font-size: 30px;
+}
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
