--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,7 @@
         <h3 class="text-muted">Project name</h3>
       </div>
 
-      <div class="jumbotron">
-        <div id="chart" class="jumbotron"></div>
-      </div>
+      <div id="chart" class="row placeholders"></div>
 
       <div class="row marketing">
         <div class='text_div'></div>
