--- a/static/jumbotron-narrow.css
+++ b/static/jumbotron-narrow.css
@@ -44,7 +44,7 @@ body {
 /* Customize container */
 @media (min-width: 768px) {
   .container {
-    max-width: 730px;
+    max-width: 75%;
   }
 }
 .container-narrow > hr {
@@ -70,7 +70,7 @@ body {
 }
 
 /* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 75%) {
   /* Remove the padding we set earlier */
   .header,
   .marketing,
