--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,17 @@
               <h4 class="modal-title" id="myModalLabel">Modal title</h4>
             </div>
             <div class="modal-body">
-              contact me
+            <h3>Like what you see?</h3>
+            <p>I am currently looking for a job!</p>
+            <address>
+              <strong>Justin Lippi</strong><br>
+              <abbr title="Phone">P:</abbr>(269) 506-4465
+            </address>
+            <address>
+              <strong>E-mail:</strong> <a href="mailto:jlippi@gmail.com">  jlippi at gmail dot com</a><br>
+              <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/pub/justin-lippi/">https://www.linkedin.com/pub/justin-lippi/</a><br>
+              <strong>Resume (pdf):</strong> <a href="{{ url_for('static',filename='JustinLippiresume.pdf') }}" download>click to download</a>
+            </address>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
