--- a/templates/project.html
+++ b/templates/project.html
@@ -90,7 +90,7 @@
               <abbr title="Phone">P:</abbr>(269) 506-4465
             </address>
             <address>
-              <strong>E-mail:</strong> <a href="mailto:jlippi@gmail.com">  jlippi at gmail dot com</a><br>
+              <strong>E-mail:</strong> <a href="mailto:jlippi at gmail dot com">  jlippi at gmail dot com</a><br>
               <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/pub/justin-lippi/">https://www.linkedin.com/pub/justin-lippi/</a><br>
               <strong>Resume (pdf):</strong> <a href="{{ url_for('static',filename='JustinLippiresume.pdf') }}" download>click to download</a>
             </address>
