--- a/templates/project.html
+++ b/templates/project.html
@@ -16,16 +16,14 @@
             <li role="presentation" class="active"><a href="#">Home</a></li>
             <li role="presentation"><a href="#" data-toggle="modal" data-target="#aboutModal">About</a></li>
             <li role="presentation"><a href="#" data-toggle="modal" data-target="#contactModal">Contact</a></li>
+            <li role="presentation"><a href="#" data-toggle="modal" data-target="#howtoModal">Howto use graph</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Helpdesk ticket classifier - django tickets</h3>
       </div>
 
       <div class="project">
-        <div class="row placeholders">
-          <div id="chart" class="col-md-11"></div>
-          <div id="ylabel" class="col-xs-1">hi</div>
-        </div>
+          <div id="chart" class="row placeholders"></div>
 
         <div class="row pad">
           <div class='text_div'></div>
@@ -105,6 +103,25 @@
           </div>
         </div>
       </div>
+
+      <!-- Modal -->
+      <div class="modal fade" id="howtoModal" tabindex=-1 role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+              <h4 class="modal-title" id="myModalLabel">How to</h4>
+            </div>
+            <div class="modal-body">
+            <img src="{{ url_for('static',filename='howto.png') }}"></img>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary btn-lg" data-dismiss="modal">Got it</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
       <footer class="footer">
         <p>&copy; Justin Lippi 2014</p>
