--- a/templates/project.html
+++ b/templates/project.html
@@ -22,10 +22,7 @@
       </div>
 
       <div class="project">
-        <div class="row placeholders">
-          <div id="chart" class="col-md-11"></div>
-          <div id="ylabel" class="col-xs-1">hi</div>
-        </div>
+          <div id="chart" class="row placeholders"></div>
 
         <div class="row pad">
           <div class='text_div'></div>
